--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "manifest_version": 2,
   "name": "__MSG_manifestName__",
+  "short_name": "Luminous",
   "description": "__MSG_manifestDescription__",
   "version": "0.0.1",
   "author": "Guilherme Baptista",
@@ -9,7 +10,7 @@
     "url": "http://gbaptista.com"
   },
   "default_locale": "en_US",
-  "homepage_url": "https://gbaptista.github.io/luminous",
+  "homepage_url": "https://gbaptista.github.io/luminous/doc/en-US/",
   "applications": {
     "gecko": {
       "id": "luminous@gbaptista.com"
