--- a/manifest.json
+++ b/manifest.json
@@ -57,9 +57,12 @@
   ],
   "background": {
     "scripts": [
-      "js/background/default_settings.js",
       "js/background/set_response_headers.js",
       "js/background/set_current_tab.js",
+      "js/background/common_names.js",
+      "js/background/default_settings.js",
+      "vendor/dexiejs/dexie.js",
+      "js/background/reports.js",
       "js/background/automatic_settings.js",
       "js/utils/colors.js",
       "js/background/update_badge.js"
