battery, gamepad and navigator interceptors

--- a/manifest.json
+++ b/manifest.json
@@ -87,8 +87,11 @@
     "js/content/interceptors/event_target/remove_event_listener.js",
     "js/content/interceptors/event_target/add_event_listener.js",
     "js/content/interceptors/fetch/fetch.js",
+    "js/content/interceptors/gamepad/get_gamepads.js",
     "js/content/interceptors/geolocation/get_current_position.js",
     "js/content/interceptors/geolocation/watch_position.js",
+    "js/content/interceptors/battery_status/get_battery.js",
+    "js/content/interceptors/navigator_id/user_agent.js",
     "js/content/interceptors/schedulers/set_interval.js",
     "js/content/interceptors/schedulers/set_timeout.js",
     "js/content/interceptors/web_socket/send.js",
