--- a/manifest.json
+++ b/manifest.json
@@ -84,14 +84,17 @@
       "js/helpers/domain_settings.js",
       "js/background/headers_and_options_listeners.js",
       "js/background/set_current_tab.js",
-      "js/background/default_settings.js",
-      "js/background/tunnels/popup.js",
+      "js/background/setup/default_settings.js",
+      "js/utils/numbers.js",
+      "js/utils/colors.js",
+      "js/background/tunnels/counters.js",
+      "js/background/tunnels/badge.js",
+      "js/background/tunnels/icon.js",
+      "js/background/tunnels/automatic_settings.js",
       "vendor/dexiejs/dexie.js",
       "js/helpers/indexed_db.js",
       "js/background/reports.js",
       "js/background/automatic_settings.js",
-      "js/utils/colors.js",
-      "js/background/update_badge.js",
       "js/background/tunnels/devtools.js"
     ]
   },
